--- a/Happy/胡闹厨房2.md
+++ b/Happy/胡闹厨房2.md
@@ -1,1 +1,13 @@
-nvfhj
+种子下载器——迅雷X破解版
+https://menry666.lanzv.com/iPwvm1o0pgjg
+密码：1234
+
+手机模拟手柄软件——魔控(推荐) 或 DroidJoy(不推荐)
+魔控：https://menry666.lanzv.com/b01a1zqcb
+——密码：1234
+DroidJoy：https://menry666.lanzv.com/b01a1znij  
+——密码：1234
+
+游戏——胡闹厨房2（约7*2G）
+https://menry666.lanzv.com/i8jTg1o0xcij
+密码：1234
